Remove required attribute from input fields

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <div class="form">
             <p class="p">Primeira nota</p>
-            <input type="number" class="nota1" id="nota1" placeholder="Digite sua primeira nota" required>
+            <input type="number" class="nota1" id="nota1" placeholder="Digite sua primeira nota">
         </div>
 
         <div class="form">
             <p class="p">Segunda nota</p> 
-            <input type="number" class="nota2" id="nota2" placeholder="Digite sua segunda nota" required> 
+            <input type="number" class="nota2" id="nota2" placeholder="Digite sua segunda nota"> 
         </div>
 
         <div class="bottom">
